@@ -35,8 +35,6 @@ dependencies {
         if (JavaVersion.current().isJava8) {
             embedded(files(Jvm.current().toolsJar))
         }
-        annotationProcessor("com.google.auto.service", "auto-service", "1.0-rc6")
-        embedded("com.google.auto.service", "auto-service", "1.0-rc6")
         embedded("com.squareup", "javapoet", javaPoetVersion)
         embedded("org.membrane-soa", "service-proxy-core", membraneSoaServiceProxyCoreVersion)
                 .exclude("org.springframework")
@@ -56,17 +54,5 @@ dependencies {
                 .exclude("commons-logging")
                 .exclude("org.apache.httpcomponents")
                 .exclude("com.google.guava")
-    }
-}
-
-if (!JavaVersion.current().isJava8) {
-    tasks.withType<JavaCompile> {
-        options.compilerArgs.addAll(arrayOf(
-                "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-                "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-                "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-                "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-                "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"
-        ))
     }
 }
